HBSD: Resolve merge conflict
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>
Sponsored-by:	SoldierX

--- a/share/man/man5/src.conf.5
+++ b/share/man/man5/src.conf.5
@@ -353,6 +353,9 @@ This is a default setting on
 amd64/amd64, arm/arm, arm/armeb, arm/armv6, arm64/aarch64 and i386/i386.
 .It Va WITH_CLANG_EXTRAS
 Set to build additional clang and llvm tools, such as bugpoint.
+.Pp
+This is a default setting on
+amd64/amd64, arm/arm, arm/armeb, arm/armv6, arm64/aarch64, i386/i386, mips/mipsel, mips/mips, mips/mips64el, mips/mips64, mips/mipsn32, mips/mipselhf, mips/mipshf, mips/mips64elhf, mips/mips64hf, powerpc/powerpc, powerpc/powerpc64 and powerpc/powerpcspe.
 .It Va WITHOUT_CLANG_FULL
 Set to avoid building the ARCMigrate, Rewriter and StaticAnalyzer components of
 the Clang C/C++ compiler.
@@ -1002,26 +1005,6 @@ Set to not build LLVM's lld linker.
 .Pp
 This is a default setting on
 mips/mipsel, mips/mips, mips/mips64el, mips/mips64, mips/mipsn32, mips/mipselhf, mips/mipshf, mips/mips64elhf, mips/mips64hf, powerpc/powerpc, powerpc/powerpc64, powerpc/powerpcspe, riscv/riscv64, riscv/riscv64sf and sparc64/sparc64.
-<<<<<<< HEAD
-When set, it enforces these options:
-.Pp
-.Bl -item -compact
-.It
-.Va WITHOUT_CFI
-.It
-.Va WITHOUT_LLD_IS_LD
-.El
-.Pp
-When set, these options are also in effect:
-.Pp
-.Bl -inset -compact
-.It Va WITH_SYSTEM_COMPILER
-(unless
-.Va WITHOUT_SYSTEM_COMPILER
-is set explicitly)
-.El
-=======
->>>>>>> origin/freebsd/current/master
 .It Va WITH_LLD
 Set to build LLVM's lld linker.
 .Pp
@@ -1067,25 +1050,11 @@ When set, it enforces these options:
 .It
 .Va WITHOUT_CFI
 .El
-.Pp
-<<<<<<< HEAD
-When set, these options are also in effect:
-.Pp
-.Bl -inset -compact
-.It Va WITH_SYSTEM_COMPILER
-(unless
-.Va WITHOUT_SYSTEM_COMPILER
-is set explicitly)
-.El
 .It Va WITH_LLD_IS_LD
 Set to use LLVM's LLD as the system linker, instead of GNU binutils ld.
 .Pp
 This is a default setting on
 amd64/amd64 and arm64/aarch64.
-=======
-This is a default setting on
-arm64/aarch64.
->>>>>>> origin/freebsd/current/master
 .It Va WITHOUT_LLVM_LIBUNWIND
 Set to use GCC's stack unwinder (instead of LLVM's libunwind).
 .Pp
@@ -1521,27 +1490,6 @@ The
 and
 .Va WITHOUT_GCC
 options control those.
-<<<<<<< HEAD
-.Pp
-This is a default setting on
-amd64/amd64 and arm64/aarch64.
-.It Va WITH_SYSTEM_COMPILER
-Set to opportunistically skip building a cross-compiler during the
-bootstrap phase of the build.
-If the currently installed compiler matches the planned bootstrap compiler
-type and revision, then it will not be built.
-This does not prevent a compiler from being built for installation though,
-only for building one for the build itself.
-The
-.Va WITHOUT_CLANG
-and
-.Va WITHOUT_GCC
-options control those.
-.Pp
-This is a default setting on
-arm/arm, arm/armeb, arm/armv6, i386/i386, mips/mipsel, mips/mips, mips/mips64el, mips/mips64, mips/mipsn32, mips/mipselhf, mips/mipshf, mips/mips64elhf, mips/mips64hf, powerpc/powerpc, powerpc/powerpc64, powerpc/powerpcspe, riscv/riscv64, riscv/riscv64sf and sparc64/sparc64.
-=======
->>>>>>> origin/freebsd/current/master
 .It Va WITHOUT_TALK
 Set to not build or install
 .Xr talk 1
